--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "@fastify/cors": "^8.3.0",
     "@prisma/client": "^4.14.1",
     "@types/node": "^20.1.4",
     "D": "^1.0.0",
-    "fastify": "^4.17.0"
+    "fastify": "^4.17.0",
+    "zod": "^3.21.4"
   }
 }
