--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "prisma": "^4.14.1",
     "tsx": "^3.12.7",
     "typescript": "^5.0.4"
@@ -17,8 +18,10 @@
   "dependencies": {
     "-": "^0.0.1",
     "@fastify/cors": "^8.3.0",
+    "@fastify/jwt": "^7.0.0",
     "@prisma/client": "^4.14.1",
     "@types/node": "^20.1.4",
+    "axios": "^1.4.0",
     "D": "^1.0.0",
     "fastify": "^4.17.0",
     "zod": "^3.21.4"
